# SuperSay

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PRIVACY.md  README.md  broskifile  debug_backend.py  debug_struct.py  default.profraw  dumper.sh  pitch.md  post-update.md  pre-update.md  report.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codspeed.yml  test.yml
SuperSay/SuperSay/: Info.plist  SuperSayApp.swift
SuperSay/SuperSay.xcodeproj/: project.pbxproj
SuperSay/SuperSay/Core/: AudioEngine.swift  HistoryManager.swift  LaunchManager.swift  Models.swift  PDFEngine.swift  SuperSayStore.swift  TextProcessor.swift
SuperSay/SuperSay/Views/: LabView.swift  LibraryView.swift  MainDashboardView.swift  SuperSayWindow.swift  VaultView.swift
backend/: .gitignore  README.md  kitten-micro-voices.npz  kitten-mini-config.json  kitten-nano-config.json  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py  middleware.py
backend/app/core/: config.py  logging.py
backend/app/services/: audio.py  audiobook_service.py  audiobook_store.py  engine_manager.py  gemini_cleaner.py  kitten_engine.py  pdf_extractor.py  text_extractor.py  tts.py
backend/benchmarks/: baseline_pipeline_stats.json  baseline_results.json  bench_audio.py  cache_stats.json  deep_profiler.py  micro_profiler.py  test_bench_api.py  test_bench_audio.py  test_bench_tts.py  thread_tuner.py
backend/scripts/: quantize_model.py
backend/tests/: test_api.py  test_audio_pipeline.py  test_audiobook.py  test_config.py  test_correlation.py  test_gemini_cleaner.py  test_kitten_engine.py  test_logging.py  test_properties.py  test_streaming_contract.py  test_tts.py
docs/: CONTRIBUTING.md  ROADMAP.md  SPRINTS.md  USER_GUIDE.md  analytics.md  architecture.md  release.md  setup-v1.1.md  testing.md
docs/specs/: accounts-analytics.md
frontend/: .swiftlint.yml  README.md
scripts/: benchmark_all.py  benchmark_api.sh  benchmark_stream.py  compile_backend.sh  create_dmg.sh  download_kitten_model.py  generate_vitals_table.py  ship.sh  visualize_vitals.py
(+59 files in other folders)
