[project]
name = "backend"
version = "1.0.3"
description = "SuperSay Inference Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "kokoro-onnx>=0.3.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.1.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "pytest-codspeed>=4.2.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
