[project]
name = "backend"
version = "2.0.0"
description = "SuperSay Inference Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "soundfile>=0.12.1",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.1.0",
    "psutil>=7.2.1",
    "kokoro-onnx>=0.4.9",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "huggingface-hub>=1.7.2",
    "pdfplumber>=0.11.0",
    "google-genai>=2.3.0",
    "aiofiles>=24.1.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "pypinyin>=0.55.0",
    "pypdfium2>=4.0.0",
    "python-docx>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.26.0",
    "pytest-codspeed>=4.2.0",
    "pytest-asyncio>=1.3.0",
    "pyinstaller>=6.19.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/main.py",
    "app/services/engine_manager.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.mutmut]
paths_to_mutate = "app/api/middleware.py,app/services/audio.py"
tests_dir = "tests"
runner = "uv run pytest -x -q --no-cov tests/test_correlation.py tests/test_properties.py tests/test_audio_pipeline.py"
